--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "body-parser": "^2.2.0",
     "bootstrap": "^5.3.3",
     "ejs": "^3.1.10",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "mysql2": "^3.14.0",
+    "sequelize": "^6.37.6"
   }
 }
