--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,8 +27,8 @@ services:
     depends_on:
       mysql:
         condition: service_healthy
-    environment:
-      - DATABASE_URL=mysql://node:welcome1@mysql:3306/guiaDePerguntas_db
+    env_file:
+      - .env
 
 volumes:
   mysql_data:
